Update Scores.java